# fastapi-chat

./: .env.example  .gitignore  GORILLA_SAYS.md  OLLAMA_SETUP.md  README.md  docker-compose.yml
backend/: Dockerfile  LINT_REPORT.md  PYTHON_SETUP.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: __init__.py  messages.py  ollama.py  rooms.py  ws.py
backend/app/core/: config.py  websocket.py
backend/app/db/: session.py
backend/app/models/: __init__.py  message.py  room.py
backend/app/schemas/: __init__.py  message.py  room.py  websocket.py
backend/app/services/: ollama.py
frontend/: Dockerfile  components.json  package.json
frontend/src/: app.css
frontend/src/lib/api/: messages.ts  ollama.ts  rooms.ts  websocket.ts
frontend/src/lib/components/: MessageForm.svelte  MessageItem.svelte  MessageList.svelte  MessageLoading.svelte  ModelSelector.svelte  RoomTabs.svelte  UserPicker.svelte  index.ts
frontend/src/lib/stores/: chat.svelte.ts
frontend/src/lib/types/: chat.ts
frontend/src/routes/: +page.svelte
